# probable-eureka

./: .env.example  .gitignore  CLAUDE.md  ISSUE_TRACKER.md  LICENSE  README.md  SITE_TEST_MATRIX.md  pyproject.toml  webcollector.yaml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: AUDIT_REPORT.md  PROJECT_PLAN.md
examples/: sample_plan.yaml
plans/: academic_arxiv.yaml  catalog_digikey.yaml  finance_sec_edgar.yaml  government_usda.yaml  jobs_hn_whoishiring.yaml  legal_courtlistener.yaml  news_reuters.yaml
tests/golden/: academic.html  finance.html  government.html  job_board.html  legal.html  news.html  product_catalog.html
tests/unit/: test_crawl_plan.py  test_critical_fixes.py  test_cross_domain.py  test_database.py  test_dedup.py  test_file_utils.py  test_html_extractor.py  test_interpreter_tools.py  test_js_interactions.py  test_metadata.py  test_pagination_handlers.py  test_pipeline.py  test_profiles.py  test_prompt_interpreter.py  test_url_utils.py  test_validation.py
webcollector/: __main__.py  cli.py  config.py  logging.py  orchestrator.py
webcollector/adapters/: base.py
webcollector/crawl/: crawler.py  downloader.py  handlers.py  rate_limiter.py
webcollector/extractor/: __init__.py  html_extractor.py  metadata.py  pdf_extractor.py
webcollector/interpreter/: plan_file_loader.py  prompt_interpreter.py  tool_executors.py  tools.py
webcollector/models/: crawl_plan.py  crawl_run.py  document.py  enums.py
webcollector/profiles/: __init__.py  escalation.py  matcher.py  models.py  store.py
webcollector/profiles/bundled/: clerkbase.yaml
webcollector/reporting/: validation.py
webcollector/storage/: database.py  dedup.py
webcollector/utils/: file_utils.py  hashing.py  url_utils.py
