[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcollector"
version = "0.1.0"
description = "Prompt-driven web crawling and document collection tool"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    # Crawl engine
    "crawlee[beautifulsoup,parsel,playwright]>=1.4.0",
    "jaro-winkler>=2.0.0",
    "scikit-learn>=1.5.0",

    # HTTP (for file downloads outside Crawlee)
    "httpx>=0.27.0",

    # HTML extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "readability-lxml>=0.8.1",

    # PDF extraction
    "mistralai>=1.0.0",
    "pdfplumber>=0.11.0",

    # Document extraction
    "python-docx>=1.1.0",

    # CLI
    "click>=8.1.0",

    # Config & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # Logging
    "structlog>=24.1.0",

    # LLM clients
    "anthropic>=0.40.0",

    # Utilities
    "langdetect>=1.0.9",
    "duckduckgo-search>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "aiohttp>=3.9.0",  # for test server
]

[project.scripts]
webcollector = "webcollector.cli:cli"

[project.entry-points."webcollector.adapters"]
sec_edgar = "webcollector.adapters.sec_edgar:SECEdgarAdapter"
arxiv = "webcollector.adapters.arxiv:ArxivAdapter"

[project.entry-points."webcollector.parsers"]
pdf = "webcollector.extractor.pdf_extractor:PDFParser"
html = "webcollector.extractor.html_extractor:HTMLParser"

[project.entry-points."webcollector.storage"]
sqlite = "webcollector.storage.sqlite_store:SQLiteStore"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
